--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,22 @@
 .App{
-  width:90%;
+}
+.App .container{
+  width: 90%;
   margin: auto;
-  padding:25px;
-  background-color: antiquewhite;
+}
+.navbar{
+  display: flex;
+  justify-content: space-between;
+  padding:10px 20px;
+  background-color: bisque;
+}
+.navbar a{
+  padding-left: 20px;
 }
 
 .movieList{
   display:flex;
-  justify-content:space-between;
+  justify-content:center;
   flex-wrap: wrap;
   gap:10px
 }
@@ -16,7 +25,7 @@
   border:1px solid whitesmoke;
   padding: 10px;
   text-align: center;
-  width:calc(30% - 5px)
+  width:calc(100% - 5px)
 }
 .p-image{
   /* width:200px; */
@@ -26,4 +35,15 @@
 .p-image img{
   width:100%;
   height:100%
+}
+
+.add{
+  margin-top: 50px;
+}
+
+.watch{
+  width: 300px;
+  display: flex;
+  line-height: 60px;
+  gap: 30px;
 }
